<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">kosICT</string>
    <string name="action_settings">Settings</string>
    <string name="kosICT">kosICT</string>
    <string name="aboutconf">KosICT is a Regional Conference organized by STIKK (Kosovo Association of Information and Communications Technology) and each year intends to cover the global trending tropics of ICT by gathering international, regional and local speakers.In addition, during this event the Kosovo ICT Association- STIKK will celebrate its 5th anniversary</string>
    <string name="speakers">Speakers</string>
    <string name="sponsors">Sponsors&amp;speakers</string>
    <string name="about">About the conference</string>
    <string name="AndersIndset">Anders, the born Norwegian out of Trondheim is serial-entrepreneur, management-thinker and speaker in the fields of leadership, branding and innovation. Anders offers companies a different mindset for creative solutions, change and sustainable growth. In 2004 he founded the creative agency evoworkx media in Bad Neustadt an der Saale together along with his partner with the goal to offer companies creative marketing solution on a fullservice scale. Amongst the clients are numerous SMB companies and so called „hidden champions“ and also DAXCompanies such as LINDE Group and Deutsche Post DHL. Over the years Anders has initiated several start-ups from cloud-based software tools, eCommerce applications to an online printhouse (DRUCKHELDEN.DE which he co-founded and build before selling the shares in 2010). Anders is founding partner and managing director of LWL GmbH - Leaders We Love, a company seated in Frankfurt am Main, which have specialized on premium C-Level executive education. LWL GmbH host and run the Marketing &amp; Innovation Forum Europe in Frankfurt and the Manager Meeting Europe also in Frankfurt, to which yearly on each forum 500 top-manager gather to discuss current changes and trends and to get inspiration from the leading global experts and the makers and leaders around the world.</string>
    <string name="update_app">Do you want to check for updates?\n\n If updates are found, you will have to re-install the app manually.</string>
    <string name="ArildLarsen">Arild Bjørn-Larsen holds an MBA and has extensive management experience in the fields mark branding, strategic development, digitization and the Internet. Bjørn-Larsen has experience from companies such as Apple, NetCom, Norligruppen, JBR / McCann Multimedia, Spray GK / Razorfish and Tarantula. He leads Booksellers Association Digitization Committee and a competency project run by BI, where 16 large Norwegian companies develop strategic competence in the use of Internet and mobile services.</string>
    <string name="BernhardJanischowsky">Bernhard Janischowsky is co-founder and COO of Trestle Group. He has enjoyed a truly global professional career, having begun as an Industrial Engineer in Dallas, Texas. Thereafter, he moved to Spain to join the German engineering group Bosch International, where he was directly responsible for transferring manufacturing processes between locations. He then moved into consulting, advising on the reengineering of corporate strategy of former East German state-owned conglomerates. He was later recruited into Arthur Andersen Business Consulting in Frankfurt, Germany to manage a variety of international projects in the areas of process design and IT strategy. After five years with Arthur Andersen he and three partners founded ecovista, a company focused on planning and implementing large scale IT projects for international clients. Building upon this success, Bernhard co-founded Trestle Group and as COO is responsible for all project delivery. Bernhard holds a degree as Industrial Engineer from the University Erlangen-Nuernberg in Germany and an M.B.A. from London Business School.</string>
    <string name="JimmyLeach">Jimmy Leach is a digital consultant working for a number of international clients dealing with digital transformation, including the internet governance organisationICANN, the Dubia-based Gems Education and the crowd-funding publisher Unbound. He also advises clients on similar matters for the public relations and public affairs company Portland Communications.
								Prior to all this, he was Head of Digital Diplomacy for the UK\'s Foreign and Commonwealth Office which in turn followed stints as Editorial Director for Digital at The Independent newspaper; director for digital at Freud Communications; Head of Digital Communications for Prime Ministers Blair and Brown in Downing Street and executive editor at Guardian.co.uk.
								He lives in south London</string>
    <string name="Media">Media:</string>
    <string name="Gold">Gold:</string>
    <string name="Developers">Developed by: \n</string>
    <string name="about_text3">\nLincensed under GPL v3.0. Source available at: https://github.com/flosskosova/SFK13-android-app </string>
    <string name="FirstPart">KosICT is a Regional Conference that each year intends to cover the global trending topics of ICT by gathering international, regional and local speakers.Topics that will be covered during the conference are:\n &#8226;Digital Transformation\n,&#8226;The Future of nearshoring/outsourcing and\n &#8226;Mobile Solutions</string>
    <string name="SecondPart">&#8226; Get the experience and best practises on the implementation of Digital Solutions\n 
&#8226;Understand the importance of Digital Transformation\n
&#8226;Learn about the benefits and use of Mobile Solutions\n
&#8226;Get more value out of your Business with Outsourcing\n
&#8226;Meet with key players in the ICT sector</string>
    <string name="TitleTwo">Reasons to attend</string>
    <string name="TitleThree">Who is organizing KosICT?</string>
    <string name="PartNine">KosICT is organized by the Kosovo Asscociation of Information and Communications Technology(STIKK).STIKK was established in 2006. However,it started its active operation thanks to the initiative of six founding companies, and the support of the Norwegian Government,through the Crimson Capital and the Norwegian ICT Association. With the purpose of acting as a collective voice of the Information and Communications Technology sector, STIKK promotes common and covering interests of the Information and Communications Technology and of professionals and individuals from these fields.\nDuring its operation STIKK managed to create a long term growth of the Information and Communications Technology industry in Kosovo,and managed imporving the business environment for the Information and Communications Technology and promoting the contribution of the Information and Communication Technology and promoting the contribution of the Information and Communications Technology to economic growth and social progress in Kosovo.STIKK has taken the lead as a facilitator of communication between stakeholers in the field of ICT, especially in relations between the business community and the Government.
        \nSTIKK is a member of the Pan European Network of the ICT and e-Business SME-s (PIN SME), and the World IT Services Alliance(WITSA), and has a very close partnership with the Albanian counterpart organization, Albanian ICT Association(AITA), and the Macedonian IT Chamber of Commerce(MASIT) and many similar organizations worldwide.
        \nMission
    	\nDevelop and independent and objective association focused solely on the needs of ALL of its members and society in general
    	\nImplement value added activities that increase the profile and organization of the entire ICT sector.
    	\nDedicate necessary funds to enable full time staff and allow reasonable time for association to become sustainable and operational.
    	\Focus on the revenue generating activities, best practices in the region, and integration into regional and European markets.</string>
    <string name="AlexanderAmmer">Mr. Ammer offers more than 15 years of strategic consulting expertise to leading companies in Europe, North America and Asia. He leads the IT Strategy and IT Efficiency team of Capgemini Consulting in the DACH Region. Previously he started-up and headed a business process offshore team located in 3 continents and servicing clients across 17 countries. He acts as an expert on digital transformation, IT innovation and IT transformation and helps Fortune 500 to accelerate business performance and to \"discover the power of digital IT\". Mr. Ammer\'s consulting work covers IT strategy target definition for public institutions, IT organization improvements for high tech corporations, digital programme and product planning for consumer &amp; services multinationals and web 2.0 initiatives for Travel and Transport companies. He also advises governmental departments in Germany and Switzerland on eGovernment and Change Management. In his view, success in innovation and transformation depends on the right match between users\' specific interests and adequate technological tools. Mr. Ammer graduated from the University for Film and TV in Munich and received a Master of Arts in Telecommunications from Indiana University Bloomington USA.  </string>
    <string name="UranikBegu">Uranik Begu is a highly experienced management and marketing executive, who currently is serving as an Executive Director at Innovation Center Kosovo (ICK). Prior to his work at ICK, Uranik has served as Head of Marketing and part of a management at Post Telecom Kosovo for four years.
								Uranik is currently close to completion of his Doctorate degree in Management, at Swiss Management Center. He is also a renowned lecturer and has taught at several private universities, and the public university of Prizren. He also serves as a Board Member for the largest European Marketing Conference held in Zurich, the CMO Conference, also known as Davos of Marketing.</string>
    <string name="VilluArak">A former journalist and communication consultant, Villu now works with ambitious startups, helping them find their voice and tell a captivating story. He has recently worked with TransferWise, ZeroTurnaround, Fleep.io, Pult.io, Deekit, and is currently building Funderbeam, a global startup tracker and virtual marketplace.
Before launching his own consulting boutique, Villu served as CEO of Hill &amp; Knowlton Estonia and was one of the pillars of Skype\’s global PR team. In his prior life as a journalist, Villu held reporting and editorial positions at various media organizations in Estonia, the Czech Republic and Sweden. He is a graduate of the State University of New York with a degree in mass media and communication.</string>
    <string name="KarlWack">Karl-J. Wack is a mobile and UX expert with many years of experience in designing and implementing customized software solutions. He founded let\'s dev GmbH &amp; Co. KG togehter with his brother Christian Wack in 2010 and offers mobile services especially for developing individual mobile business solutions. Furthermore, Karl-J. Wack is a board member of the German Usability Professionals Association.</string>

</resources>