<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvTitleListView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="Speakers"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="#006699" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true" >

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@color/White" >

            <ImageView
                android:id="@+id/ImageViewDigitalTransform"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/digital_transformation" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/ImageViewAndersIndset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:paddingTop="5dp"
                    android:src="@drawable/anders_indset" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:gravity="center"
                    android:paddingTop="50dp"
                    android:text="Anders Indset"
                    android:textColor="#006699"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/AndersIndset" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="3dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="30dp"
                android:background="#006699"
                android:paddingBottom="10dp"
                android:paddingTop="30dp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/ImageViewJimmyLeach"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:src="@drawable/jimmy_leach" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:gravity="center"
                    android:paddingTop="50dp"
                    android:text="Jimmy Leach"
                    android:textColor="#006699"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/JimmyLeach" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="3dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="30dp"
                android:background="#006699"
                android:paddingBottom="10dp"
                android:paddingTop="30dp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/ImageViewAlexanderAmmer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:src="@drawable/alexander_ammer" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:gravity="center"
                    android:paddingTop="50dp"
                    android:text="Alexander Ammer"
                    android:textColor="#006699"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/AlexanderAmmer" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="3dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="30dp"
                android:background="#006699"
                android:paddingBottom="10dp"
                android:paddingTop="30dp" />

            <ImageView
                android:id="@+id/ImageViewMobileSolutions"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/mobile_solutions" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/ImageViewArildLarsen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:src="@drawable/arild_larsen" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:gravity="center"
                    android:paddingTop="50dp"
                    android:text="Arild Bjørn-Larsen"
                    android:textColor="#006699"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ArildLarsen" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="3dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="30dp"
                android:background="#006699"
                android:paddingBottom="10dp"
                android:paddingTop="30dp" />

            <ImageView
                android:id="@+id/ImageViewOutsourcingFuture"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/outsourcing_future" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/ImageViewBernhardJanischowsky"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:src="@drawable/bernhard_janischowsky" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:gravity="center"
                    android:paddingTop="50dp"
                    android:text="Bernhard Janischowsky"
                    android:textColor="#006699"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BernhardJanischowsky" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="3dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="30dp"
                android:background="#006699"
                android:paddingBottom="10dp"
                android:paddingTop="30dp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/ImageViewVilluArak"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:src="@drawable/villu_arak" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:gravity="center"
                    android:paddingTop="50dp"
                    android:text="Villu Arak"
                    android:textColor="#006699"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/VilluArak" />
            
        </TableLayout>
    </ScrollView>

</LinearLayout>